Onchange-event not triggered when resetting non-focused date-input-field (same for time-input-field)
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox68 | --- | fixed |
People
(Reporter: gabriel, Assigned: mbrodesser)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files, 2 obsolete files)
| Reporter | ||
Comment 2•7 years ago
|
||
Comment 3•7 years ago
|
||
| Reporter | ||
Comment 4•7 years ago
|
||
Comment 5•7 years ago
|
||
| Reporter | ||
Comment 6•7 years ago
|
||
| Reporter | ||
Updated•7 years ago
|
Comment 7•7 years ago
|
||
| Reporter | ||
Comment 8•7 years ago
|
||
| Reporter | ||
Updated•7 years ago
|
Updated•7 years ago
|
Comment 9•7 years ago
|
||
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Comment 12•7 years ago
|
||
Updated•7 years ago
|
Updated•7 years ago
|
| Reporter | ||
Comment 13•6 years ago
|
||
| Reporter | ||
Updated•6 years ago
|
Comment 16•6 years ago
|
||
this issue is not resolved from almost an year.😤
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 17•6 years ago
|
||
In order to trigger the 'onchange' event when resetting the 'date' or
'time' html input elements.
This review is only basis for discussion in order to determine if the
fix goes in the correct direction.
| Assignee | ||
Comment 18•6 years ago
|
||
:smaug: can you please have a look at the attached review (https://bugzilla.mozilla.org/attachment.cgi?id=9051306). It is just a first version, reflecting my current understanding of the code. I'm interested if the fix is going in the correct direction. Any feedback is appreciated.
Comment 19•6 years ago
|
||
Took a bit time to figure out that stuff, but looks reasonable.
Store the initial value early so that we can compare later when value is set to "";
| Assignee | ||
Comment 20•6 years ago
|
||
In order to trigger the 'onchange' event when resetting the 'date' or
'time' html input elements.
Updated•6 years ago
|
| Assignee | ||
Comment 21•6 years ago
|
||
In order to trigger the 'onchange' event when resetting the 'date' or
'time' html input elements.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 22•6 years ago
|
||
The try run (https://treeherder.mozilla.org/#/jobs?repo=try&revision=fb92b88e86520088bd63f140da4f19d0afcf0849,) for the attached patch looks OK. It contains a few failures, but they are not related to this change.
| Assignee | ||
Updated•6 years ago
|
Comment 23•6 years ago
|
||
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/98343ff41322
set default value for 'mFocusedValue' for the html input elements 'date' and 'time'. r=smaug
Comment 24•6 years ago
|
||
| bugherder | ||
Description
•