Bug 1446722: set default value for 'mFocusedValue' for the html input elements 'date' and 'time'. r=smaug

In order to trigger the 'onchange' event when resetting the 'date' or
'time' html input elements.

Differential Revision: https://phabricator.services.mozilla.com/D24206

--HG--
extra : moz-landing-system : lando